<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="app_name">全运动</string>
    <string name="app_desc">随时随地 摇出健康</string>
    <string name="app_vice">摇跑球</string>
    <string name="app_me_around">我在你身边</string>
    <string name="app_location">使用基于地理位置服务</string>
    <string name="app_location_desc">为了使用摇跑球硬件，我们必须通过BLE蓝牙进行连接，而使用BLE蓝牙需要使用到地理位置权限，因此必须开启地理位置权限才可使用，我们不会去收集相关用户地理位置信息</string>
    <string name="app_cancel">取消</string>
    <string name="app_next">跳过</string>
    <string name="app_privacy_url">https://hisport.cloud/privacy</string>
    <string name="app_protocol_url">https://hisport.cloud/protocol</string>
    <string name="tab_rate">竞速</string>
    <string name="tab_mine">我的</string>
    <string name="tab_match">对抗赛</string>
    <string name="tab_match2">锦标赛</string>
    <string name="my_ranks_1">我的排名：%1$s</string>
    <string name="my_ranks">我的团队排名：%1$s</string>
    <string name="my_ranks_progress_reach">已跑完总距离的%1$s %%，还差%2$s到达终点</string>
    <string name="lbl_rank_score">成绩:</string>
    <string name="lbl_rank_time">时间:</string>
    <string name="lbl_rank_index">指数:</string>
    <string name="lbl_rank_distance">距离:</string>
    <string name="title_mine_match">我的赛事</string>
    <string name="lbl_match_cancel_registration">取消报名</string>
    <string name="lbl_match_attend">已报名</string>
    <string name="lbl_match_over">已结束</string>
    <string name="lbl_match_sign_now">立即报名</string>
    <string name="lbl_match_sign_now2">即将开始</string>
    <string name="lbl_match_right_now">立即比赛</string>
    <string name="lbl_match_ranking">排行榜</string>
    <string name="lbl_match_vip">摇跑会员申请</string>
    <string name="lbl_match_market">购买渠道</string>
    <string name="lbl_match_ranking_check">排行榜</string>
    <string name="lbl_match_sign_num">已报名%1$d人</string>
    <string name="title_server">切换服务器</string>
    <string name="lbl_china_server">中国服务器</string>
    <string name="lbl_other_server">国际服务器</string>
    <string name="lbl_select_server">当前</string>
    <string name="update_tip">升级提示</string>
    <string name="tip">温馨提示</string>
    <string name="tip_warn">警告</string>
    <string name="tip_data_error">数据发生错误，请退出重新尝试!</string>
    <string name="tip_country_codes">获取不到国际码信息</string>
    <string name="tip_server">切换到新服务器，需要创建新的账号，原服务器数据仍然保留，并未丢失。您确定要切换吗？</string>
    <string name="rank_all_1">成年榜</string>
    <string name="rank_all_2">青少年排行</string>
    <string name="data_err_tip">发现数据异常</string>
    <string name="notice_tip">摇跑3分钟的距离/摇跑半马的时间</string>
    <string name="tv_run_notice_tip_time">上榜时间:</string>
    <string name="tv_run_notice_tip_cur">当前活力指数：%1$s</string>
    <string name="tv_run_notice_tip_0">活力指数(ei)：%1$s</string>
    <string name="tv_run_notice_tip_1">摇跑3分钟，%1$s km</string>
    <string name="tv_run_notice_tip_2">摇跑半马拉松，%1$s</string>
    <string name="tv_run_notice_tip_3">摇跑马拉松，%1$s</string>
    <string name="tv_run_notice_tip_4">摇跑%1$s分钟的距离，%2$s km</string>
    <string name="tv_run_notice_tip_5">摇跑%1$s公里的时间，%2$s</string>
    <string name="title_rank_prex">排行</string>
    <string name="lbl_match_rank_my_grade">我的排名:</string>
    <string name="turn_speed_3">最高转速(rpm)</string>
    <string name="turn_speed_2">最高转速</string>
    <string name="turn_speed_unit_2">(rpm)</string>
    <string name="turn_one_minute_3">摇跑一分钟(km)</string>
    <string name="turn_one_minute_2">摇跑一分钟</string>
    <string name="turn_one_minute_unit_2">(km)</string>
    <string name="turn_exponent_2">活力指数</string>
    <string name="turn_exponent_unit_2">(ei)</string>
    <string name="turn_marathon_2">摇跑马拉松</string>
    <string name="turn_marathon_unit_2">(time)</string>
    <string name="turn_duration">摇跑时间</string>
    <string name="turn_speed">最高(rpm)</string>
    <string name="turn_metre">距离(km)</string>
    <string name="turn_time">时间(s)</string>
    <string name="refuse_ble"> 位置访问权限被拒绝将无法搜索到ble设备,请跳转到设置界面进行设置</string>
    <string name="location_ble"> 只有允许访问位置才能搜索到蓝牙设备</string>
    <string name="location_ble_tip">本APP硬件设备需要使用地理位置权限，才可以使用并搜索ble蓝牙设备并与之通信</string>
    <string name="location_service"> 位置服务未开启，将无法搜索到ble设备,请跳转到设置界面进行设置</string>
    <string name="connected_device_to_play">蓝牙%1$s连接成功,请确认是否开始运动</string>
    <string name="connected_device_finished2">摇跑球：%1$s</string>
    <string name="network_error">当前网络不可用，请检查你的网络设置</string>
    <string name="wall_ball_disabled">蓝牙正在连接中...</string>
    <string name="wall_ball_disconnected">摇跑球已经断开连接</string>
    <string name="wall_ball_to_connected">未连接设备</string>
    <string name="wall_ball_no_connected">摇跑球：(未连接)</string>
    <string name="connected_success">蓝牙连接成功</string>
    <string name="tip_bluetooth_disconnected">您的蓝牙设备已断开，请重新连接</string>
    <string name="bluetooth_ble_tip">本APP硬件设备需要使用蓝牙权限，才可以使用并搜索ble蓝牙设备并与之通信</string>
    <string name="search_match_hit">搜索赛事</string>
    <string name="search_match_edt_hit">搜索赛事</string>
    <string name="search_name_hit">搜索用户名称</string>
    <string name="match_detail_title">赛事详情</string>
    <string name="exit_app_tip">再按一次退出程序</string>
    <string name="match_check_sign_up">查看报名</string>
    <string name="match_sign_up">立即报名</string>
    <string name="match_check_rank">查看排名</string>
    <string name="match_enter_match">立即比赛</string>
    <string name="match_100">100米</string>
    <string name="match_200">200米</string>
    <string name="match_800">800米</string>
    <string name="match_1000">1000米</string>
    <string name="match_1500">1500米</string>
    <string name="match_3000">3000米</string>
    <string name="match_10000">10000米</string>
    <string name="match_half">半马</string>
    <string name="match_full">全马</string>
    <string name="match_sub_title">2021年第一季度季后赛</string>
    <string name="match_prize">奖金/奖品</string>
    <string name="match_point">积分</string>
    <string name="match_registered">已报名</string>
    <string name="match_attend">已关注</string>
    <string name="match_registration_requirements">报名要求</string>
    <string name="match_tournament_desc">赛事说明</string>
    <string name="match_phone">联系方式</string>
    <string name="title_double_match">发起双人比赛</string>
    <string name="lbl_double_match_time">分钟</string>
    <string name="title_team_match">发起团队比赛</string>
    <string name="title_add_match">加入比赛</string>
    <string name="title_add_match_board">加入比赛</string>
    <string name="lbl_input_match_tip">尚未有信息未输入,请重新填写</string>
    <string name="lbl_input_match_person_tip">报名人数限制在10个</string>
    <string name="lbl_input_clip_error_tip">黏贴版内容有误,请重新去黏贴</string>
    <string name="lbl_error_room_num_tip">房间号没有，请退出重新输入房间号</string>
    <string name="title_match_team">比赛</string>
    <string name="lbl_exit_the_pk">您是否确认退出本次PK</string>
    <string name="lbl_not_find_pk_id">找不到房间ID，请退出重新再试！</string>
    <string name="lbl_ready_pk">准备</string>
    <string name="lbl_ready_cancel">取消准备</string>
    <string name="title_pk_rule">比赛规则</string>
    <string name="lbl_set_wound">请上紧发条！</string>
    <string name="lbl_pk_offline">已掉线</string>
    <string name="lbl_pk_wait_other">等待对方进入…</string>
    <string name="lbl_pk_net_error">网络不佳,请重新再试</string>
    <string name="lbl_pk_match_2">双人比赛</string>
    <string name="lbl_pk_match_team">团队比赛</string>
    <string name="title_match_record">PK记录</string>
    <string name="lbl_detail">查看详情</string>
    <string name="lbl_detail2">查看详情</string>
    <string name="lbl_speed_max">最大转速</string>
    <string name="title_match_data_detail">数据详情</string>
    <string name="lbl_finish_market">比赛结束 \n 请耐心等待结果</string>
    <string name="lbl_exit_tip">比赛还未结束确认退出吗？</string>
    <string name="lbl_match_pk_id">比赛ID：</string>
    <string name="lbl_match_pk_id_no">比赛ID</string>
    <string name="turn_speed_match">最大转速</string>
    <string name="turn_metre_match">距离</string>
    <string name="lbl_refresh_id">点击刷新</string>
    <string name="lbl_team_name">我方队名</string>
    <string name="lbl_other_team_name">对方队名</string>
    <string name="lbl_match_time">时间</string>
    <string name="lbl_match_max_person">队伍人数</string>
    <string name="lbl_match_input_name">请输入我方队名</string>
    <string name="lbl_match_input_name2">请输入对方队名</string>
    <string name="lbl_match_paste">点击黏贴</string>
    <string name="lbl_input_match_person">输入队伍人数</string>
    <string name="lbl_input_match_horse">%1$d号%2$s</string>
    <string name="lbl_input_match_horse_selected">是否确定选择%1$d号%2$s?</string>
    <string name="lbl_input_match_person_num">%1$s人</string>
    <string name="lbl_match_break_off">断线重连中，请稍后…</string>
    <string name="lbl_match_click_fresh">点击刷新</string>
    <string name="lbl_mine_total_distance">我方总距离（km）</string>
    <string name="lbl_other_total_distance">对方总距离（km）</string>
    <string name="lbl_pk_rule">1、俱乐部更换 \n 若选错俱乐部，请退出房间，重新进入选择 俱乐部。 \n \n 2、开始游戏 \n  创建者请与参赛者协商好时间，再点击 “开始”。 \n \n 3、上发条 \n 请在游戏开始前上紧发条。 \n \n 4、摇球 \n 在比赛正式开始前，请勿摇球。 \n\n 5.掉线 \n 若参赛者掉线30S仍未上线，视为退出房间。</string>
    <string name="lbl_exit_match_message">是否离开？</string>
    <string name="lbl_match_before">未开始</string>
    <string name="lbl_match_ing">进行中</string>
    <string name="lbl_match_over2">已结束</string>
    <string name="lbl_match_person">个人赛</string>
    <string name="lbl_match_group">团队赛</string>
    <string name="lbl_match_tab_1">对抗赛</string>
    <string name="lbl_match_tab_2">锦标赛</string>
    <string name="lbl_match_tab_rank_1">活力指数</string>
    <string name="lbl_match_tab_rank_2">摇跑最高转速</string>
    <string name="lbl_match_tab_rank_3">摇跑1分钟</string>
    <string name="lbl_match_tab_rank_4">摇跑马拉松</string>
    <string name="lbl_match_tab_rank_5">摇跑转速</string>
    <string name="lbl_match_attend_title">恭喜</string>
    <string name="lbl_match_attend_complete">完成挑战</string>
    <string name="lbl_match_attend_persons">参与人数%1$s人</string>
    <string name="lbl_match_attend_distance">总距离%1$skm</string>
    <string name="lbl_match_no_match">当前没有进行中的比赛</string>
    <string name="lbl_match_stage_info">赛段信息</string>
    <string name="lbl_match_status_info_1">未报名</string>
    <string name="lbl_match_status_info_2">已报名</string>
    <string name="lbl_match_status_info_3">已结束</string>
    <string name="lbl_match_corner_tip_1">个人</string>
    <string name="title_feedback">意见反馈</string>
    <string name="lbl_feedback_desc">您的意见就是全云动进步的动力!</string>
    <string name="lbl_email">邮箱反馈</string>
    <string name="lbl_email_desc">邮箱:</string>
    <string name="lbl_email_address">RunOrbclub@gmail.com</string>
    <string name="lbl_email_aq">您可以给全云动发送邮件进行反馈!</string>
    <string name="lbl_add_qq_qun">加入QQ群</string>
    <string name="lbl_add_qq_qun_feedback">您可以加入QQ群与专属客服进行反馈！</string>
    <string name="lbl_add_qq_number">群号：555156070</string>
    <string name="lbl_sex">性别</string>
    <string name="lbl_man">男</string>
    <string name="lbl_feman">女</string>
    <string name="lbl_name">姓名</string>
    <string name="lbl_birthday">生日</string>
    <string name="lbl_birthday_hit">请输入您的出生日期</string>
    <string name="lbl_high">身高</string>
    <string name="lbl_high_hit">请输入您的身高</string>
    <string name="lbl_weight">体重</string>
    <string name="lbl_weight_hit">请输入您的体重</string>
    <string name="lbl_city">城市</string>
    <string name="lbl_city_hit">请输入您的所在城市</string>
    <string name="binding_name_input">请输入您的姓名</string>
    <string name="btn_confirm2">确认</string>
    <string name="lbl_select_city">选择城市</string>
    <string name="menu_today">今天</string>
    <string name="menu_week">周最佳</string>
    <string name="menu_month">月最佳</string>
    <string name="menu_year">年最佳</string>
    <string name="lbl_select_cur">当前:</string>
    <string name="lbl_age_between">年龄阶段</string>
    <string name="lbl_age_between_1">成年</string>
    <string name="lbl_age_between_2">青少年</string>
    <string name="lbl_age_between_3">全部</string>
    <string name="lbl_group_between">团体类型</string>
    <string name="lbl_group_between_1">个人</string>
    <string name="lbl_group_between_2">团体</string>
    <string name="lbl_group_between_3">全部</string>
    <string name="lbl_reset">重置</string>
</resources>