<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/bg_content"
  android:orientation="vertical">

  <include
    layout="@layout/header_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="10dp"
    android:text="@string/lbl_select_city"
    android:textStyle="bold"
    android:textColor="#ffffffff"
    android:textSize="@dimen/text_20" />

  <RelativeLayout
    android:id="@+id/ryTeenage"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="15dp">

    <TextView
      android:id="@+id/tvCurCityTag"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/lbl_select_cur"
      android:textColor="#FFFFFF"
      android:textSize="@dimen/text_20" />

    <TextView
      android:id="@+id/tvCurCity"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="10dp"
      android:layout_toRightOf="@+id/tvCurCityTag"
      android:drawableRight="@mipmap/icon_pos"
      android:shadowColor="#29000000"
      android:shadowDx="0"
      android:shadowDy="3"
      android:shadowRadius="3.0"
      android:textColor="#fff9e85b"
      android:textSize="@dimen/text_20"
      tools:text="深圳市" />



  </RelativeLayout>

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_marginLeft="10dp"
    android:textStyle="bold"
    android:text="@string/lbl_group_between"
    android:textColor="#ffffffff"
    android:textSize="@dimen/text_20"
    android:visibility="gone"/>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:orientation="horizontal"
    android:visibility="gone">

    <TextView
      android:id="@+id/tv_group_person"
      android:layout_width="88dp"
      android:layout_height="28dp"
      android:layout_marginLeft="15dp"
      android:clickable="true"
      android:gravity="center"
      android:background="@drawable/selector_ellipse_selected_button"
      android:text="@string/lbl_group_between_1"
      android:textColor="#F9E85B"
      android:textSize="@dimen/text_20" />

    <TextView
      android:id="@+id/tv_group_group"
      android:layout_width="88dp"
      android:layout_height="28dp"
      android:layout_marginLeft="15dp"
      android:clickable="true"
      android:gravity="center"
      android:background="@drawable/selector_ellipse_button"
      android:text="@string/lbl_group_between_2"
      android:textColor="#767779"
      android:textSize="@dimen/text_20" />

    <TextView
      android:id="@+id/tv_group_all"
      android:layout_width="88dp"
      android:layout_height="28dp"
      android:layout_marginLeft="15dp"
      android:clickable="true"
      android:gravity="center"
      android:visibility="gone"
      android:background="@drawable/selector_ellipse_button"
      android:text="@string/lbl_group_between_3"
      android:textColor="#767779"
      android:textSize="@dimen/text_20" />

  </LinearLayout>

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_marginLeft="10dp"
    android:textStyle="bold"
    android:text="@string/lbl_sex"
    android:textColor="#ffffffff"
    android:textSize="18sp" />

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:orientation="horizontal">

    <TextView
      android:id="@+id/tvSexMan"
      android:layout_width="88dp"
      android:layout_height="28dp"
      android:layout_marginLeft="15dp"
      android:clickable="true"
      android:gravity="center"
      android:background="@drawable/selector_ellipse_selected_button"
      android:text="@string/lbl_man"
      android:textColor="#F9E85B"
      android:textSize="@dimen/text_20" />

    <TextView
      android:id="@+id/tvSexWomen"
      android:layout_width="88dp"
      android:layout_height="28dp"
      android:layout_marginLeft="15dp"
      android:clickable="true"
      android:gravity="center"
      android:background="@drawable/selector_ellipse_button"
      android:text="@string/lbl_feman"
      android:textColor="#767779"
      android:textSize="@dimen/text_20" />

    <TextView
      android:id="@+id/tvSexAll"
      android:layout_width="88dp"
      android:layout_height="28dp"
      android:layout_marginLeft="15dp"
      android:clickable="true"
      android:gravity="center"
      android:background="@drawable/selector_ellipse_button"
      android:text="@string/lbl_age_between_3"
      android:textColor="#767779"
      android:textSize="@dimen/text_20" />

  </LinearLayout>

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_marginLeft="10dp"
    android:textStyle="bold"
    android:text="@string/lbl_age_between"
    android:textColor="#ffffffff"
    android:textSize="18sp" />

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:orientation="horizontal">

    <TextView
      android:id="@+id/tv_age_adult"
      android:layout_width="88dp"
      android:layout_height="28dp"
      android:layout_marginLeft="15dp"
      android:clickable="true"
      android:gravity="center"
      android:background="@drawable/selector_ellipse_selected_button"
      android:text="@string/lbl_age_between_1"
      android:textColor="#F9E85B"
      android:textSize="@dimen/text_20" />

    <TextView
      android:id="@+id/tv_age_teen"
      android:layout_width="88dp"
      android:layout_height="28dp"
      android:layout_marginLeft="15dp"
      android:clickable="true"
      android:gravity="center"
      android:background="@drawable/selector_ellipse_button"
      android:text="@string/lbl_age_between_2"
      android:textColor="#767779"
      android:textSize="@dimen/text_20" />

    <TextView
      android:id="@+id/tv_age_all"
      android:layout_width="88dp"
      android:layout_height="28dp"
      android:layout_marginLeft="15dp"
      android:clickable="true"
      android:gravity="center"
      android:background="@drawable/selector_ellipse_button"
      android:text="@string/lbl_age_between_3"
      android:textColor="#767779"
      android:textSize="@dimen/text_20" />

  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="55dp"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="horizontal">
    <TextView
      android:id="@+id/tv_Reset"
      android:layout_width="108dp"
      android:layout_height="40dp"
      android:layout_marginLeft="15dp"
      android:clickable="true"
      android:gravity="center"
      android:background="@drawable/selector_ellipse_selected_button2"
      android:text="@string/lbl_reset"
      android:textColor="#F5BE0A"
      android:textSize="@dimen/text_20" />

    <TextView
      android:id="@+id/tv_Confirm"
      android:layout_width="108dp"
      android:layout_height="40dp"
      android:layout_marginLeft="25dp"
      android:clickable="true"
      android:gravity="center"
      android:background="@drawable/selector_ellipse_confirm"
      android:text="@string/btn_confirm2"
      android:textColor="#1A1D20"
      android:textSize="@dimen/text_20" />

  </LinearLayout>

</LinearLayout>