<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_content">

    <include
        android:id="@+id/lyHeader"
        layout="@layout/header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lyHeader">

        <LinearLayout
            android:id="@+id/lyTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_sex"
                android:textColor="#ffffffff"
                android:textSize="@dimen/text_18" />

            <RadioGroup
                android:id="@+id/rgDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center_horizontal"
                android:gravity="left|center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbMan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/selector_checked"
                    android:checked="true"
                    android:gravity="center"
                    android:text="@string/lbl_man"
                    android:textColor="#ffffff"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/rbFeman"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:button="@drawable/selector_checked"
                    android:checked="false"
                    android:gravity="center"
                    android:text="@string/lbl_feman"
                    android:textColor="#ffffff"
                    android:textSize="18sp" />


            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_name"
                android:textColor="#ffffffff"
                android:textSize="@dimen/text_18" />

            <EditText
                android:id="@+id/edtPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/binding_name_input"
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="#ff373940"
                android:textSize="@dimen/text_16"
                android:theme="@style/MyEditText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/lbl_birthday"
                android:textColor="#ffffffff"
                android:textSize="@dimen/text_18" />

            <EditText
                android:id="@+id/edtBirthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableBottom="#ff373940"
                android:drawablePadding="15dp"
                android:focusable="false"
                android:hint="@string/lbl_birthday_hit"
                android:imeOptions="actionDone"
                android:inputType="none"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="#ff373940"
                android:textSize="@dimen/text_16"
                android:theme="@style/MyEditText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/lbl_high"
                android:visibility="gone"
                android:textColor="#ffffffff"
                android:textSize="@dimen/text_18" />

            <EditText
                android:id="@+id/edtHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:focusable="false"
                android:visibility="gone"
                android:hint="@string/lbl_high_hit"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="#ff373940"
                android:textSize="@dimen/text_16"
                android:theme="@style/MyEditText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/lbl_weight"
                android:visibility="gone"
                android:textColor="#ffffffff"
                android:textSize="@dimen/text_18" />

            <EditText
                android:id="@+id/edtWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:focusable="false"
                android:visibility="gone"
                android:hint="@string/lbl_weight_hit"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="#ff373940"
                android:textSize="@dimen/text_16"
                android:theme="@style/MyEditText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/lbl_city"
                android:textColor="#ffffffff"
                android:textSize="@dimen/text_18" />

            <EditText
                android:id="@+id/edtCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:focusable="false"
                android:hint="@string/lbl_city_hit"
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="#ff373940"
                android:textSize="@dimen/text_16"
                android:theme="@style/MyEditText" />


        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30dp"
        android:textAllCaps="false"
        android:background="@drawable/selector_match_btn_sign_up"
        android:text="@string/match_sign_up"
        android:textColor="#FDE833"
        android:textSize="@dimen/text_14" />


</RelativeLayout>