<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_content"
    android:orientation="vertical">

    <include
        android:id="@+id/lyHeader"
        layout="@layout/header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="25dp"
            android:text="@string/title_feedback"
            android:textColor="#ffffffff"
            android:textSize="22sp" />

        <RelativeLayout
            android:id="@+id/ryNotify"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:text="@string/lbl_feedback_desc"
                android:textColor="#ffffffff"
                android:textSize="16sp" />

        </RelativeLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="30dp"
            android:text="@string/lbl_add_qq_qun"
            android:textColor="#ffffffff"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:text="@string/lbl_add_qq_qun_feedback"
            android:textColor="#ff767779"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:text="@string/lbl_add_qq_number"
            android:textColor="#fff9e85b"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:background="@mipmap/qq_qun" />


        <RelativeLayout
            android:id="@+id/ryUserInfo"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:visibility="gone"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp">


            <TextView
                android:id="@+id/tveamil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:text="@string/lbl_email"
                android:textColor="#ffffffff"
                android:textSize="16sp" />


        </RelativeLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:visibility="gone"
            android:text="@string/lbl_email_aq"
            android:textColor="#ff767779"
            android:textSize="16sp" />

        <RelativeLayout
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp">


            <TextView
                android:id="@id/tveamil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:text="@string/lbl_email_desc"
                android:textColor="#ff767779"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@+id/img_email_more"
                android:layout_toRightOf="@+id/tveamil"
                android:gravity="right"
                android:text="@string/lbl_email_address"
                android:textColor="#FDE833"
                android:textSize="16sp" />


        </RelativeLayout>


    </LinearLayout>


</LinearLayout>