<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@mipmap/mine_score_pop"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tv_info_day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:text="@string/menu_today"
        android:textColor="#ffffffff"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/tv_info_week"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="18dp"
        android:gravity="center_horizontal"
        android:text="@string/menu_week"
        android:textColor="#ffffffff"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_info_month"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="18dp"
        android:gravity="center_horizontal"
        android:text="@string/menu_month"
        android:textColor="#ffffffff"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_info_year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="18dp"
        android:gravity="center_horizontal"
        android:text="@string/menu_year"
        android:textColor="#ffffffff"
        android:textSize="16sp" />
</LinearLayout>